// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders touch header at arbitrary depth 1`] = `
<header
  className="touch-header hidden-sm-up"
>
  <nav>
    <ul>
      <li
        className="forelast"
        data-id={4}
        tabIndex="0"
      >
        <div
          className="center-axis"
        >
          <div
            className="inner"
            onClick={[Function]}
          >
            depth-2
          </div>
        </div>
      </li>
      <li
        className="previous"
        data-id={5}
        tabIndex="0"
      >
        <div
          className="center-axis"
        >
          <div
            className="inner"
            onClick={[Function]}
          >
            depth-3
          </div>
        </div>
      </li>
      <li
        className="current"
        data-id={6}
        tabIndex="0"
      >
        <div
          className="center-axis"
        >
          <div
            className="inner"
            onClick={[Function]}
          >
            depth-4
          </div>
        </div>
      </li>
      <li
        className="next"
        data-id={7}
        tabIndex="0"
      >
        <div
          className="center-axis"
        >
          <div
            className="inner"
            onClick={[Function]}
          >
            
          </div>
        </div>
      </li>
    </ul>
  </nav>
</header>
`;

exports[`Renders touch header at root 1`] = `
<header
  className="touch-header hidden-sm-up"
>
  <nav>
    <ul>
      <li
        className="forelast"
        data-id={0}
        tabIndex="0"
      >
        <div
          className="center-axis"
        >
          <div
            className="inner"
            onClick={[Function]}
          >
            
          </div>
        </div>
      </li>
      <li
        className="previous"
        data-id={1}
        tabIndex="0"
      >
        <div
          className="center-axis"
        >
          <div
            className="inner"
            onClick={[Function]}
          >
            
          </div>
        </div>
      </li>
      <li
        className="current"
        data-id={2}
        tabIndex="0"
      >
        <div
          className="center-axis"
        >
          <div
            className="inner"
            onClick={[Function]}
          >
            /
          </div>
        </div>
      </li>
      <li
        className="next"
        data-id={3}
        tabIndex="0"
      >
        <div
          className="center-axis"
        >
          <div
            className="inner"
            onClick={[Function]}
          >
            
          </div>
        </div>
      </li>
    </ul>
  </nav>
</header>
`;
